# ListaSpesa

./: CMakeLists.txt  Category.cpp  Category.h  Item.cpp  Item.h  Observer.h  Readme.txt  ShoppingList.cpp  ShoppingList.h  User.cpp  User.h  main.cpp  test_Category.cpp
tests/: CMakeLists.txt  test_Category.cpp  test_ShoppingList.cpp  test_User.cpp  test_item.cpp
